tests/valid_inputs/ic_int_ptr_to_void_ptr.cpp
// test that int* is implicitly convertible to void*
int main() {
	int *pi;
	void *pv = pi;
}
