tests/invalid_inputs/sema/add_two_pointers.cpp
// test that two pointers cannot be added with +

void f() {
	int *p1, *p2;
	p1 + p2;
}
